# cookiecutter-in-rust-cli

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md  SECURITY.md
rustycookie/: Cargo.toml  build.rs  pyoxidizer.bzl  rustycookie-manifest.rc
rustycookie.bak/: Cargo.toml  pyoxidizer.bzl
rustycookie/src/: main.rs
