[tool.poetry]
name = "cookiecutter-in-rust-cli"
version = "0.1.0"
description = "Experimenting with embedding Python's cookiecutter into a Rust CLI"
authors = ["Tim O'Guin"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
click-repl = "^0.2.0"
cookiecutter = "^2.1.1"
prompt-toolkit = "^3.0.36"
pyoxidizer = "^0.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
